--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
                         <svg class="account-icon" aria-label="Registration">
 
-                            <use href="/images/symbol-defs.svg#icon-acc"></use>
+                            <use href="./images/symbol-defs.svg#icon-acc"></use>
 
                         </svg>
 
